# quant-trading

./: .editorconfig  .env.example  .gitignore  AGENTS.md  HISTORY.md  README.md  TODO.md  config.py  pyproject.toml
api/: main.py
backtest/: engine.py  metrics.py  paper_trade.py  wfa.py
broker/: executor.py  kis.py  mirae.py  safety.py  upbit.py
dashboard/: app.py
data/: collector.py  intraday.py  universe.py
docs/: dashboard-design.md
paper/: portfolio.py
scheduler/: daily_report.py  daily_review.py  live_runner.py  notify.py  runner.py  telegram_agent.py
strategy/: crossover.py  grid.py  live.py  ma.py  momentum.py  regime.py  signals.py  switcher.py  trigger.py  volatility_breakout.py
