[project]
name = "quant-trading"
version = "0.1.0"
description = "QQQ 자동매매 - 이동평균선 기반 퀀트 트레이딩"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "vectorbt>=0.28.2",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
